--- a/post.hbs
+++ b/post.hbs
@@ -19,6 +19,8 @@ the {body} of the default.hbs template, which contains our header/footer. }}
 	<div class="content-wrapper">
 		<header class="entry-header">
 			<h1 class="entry-title">{{{title}}}</h1>
+
+			{{> "feature-image"}}
 		</header><!-- .entry-header -->
 
 
