--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -746,6 +746,14 @@ Menu
 		display: block;
 		float: none;
 	}
+
+	.search-toggle {
+		top: 5px;
+	}
+
+	.search-toggle:before {
+		font-size: 15px;
+	}
 }
 
 /* Social Links */
