add featured image to header

--- a/default.hbs
+++ b/default.hbs
@@ -33,7 +33,7 @@
 				<div class="gh-search gh-icon-btn" data-ghost-search><span class="search-toggle"></span></div>
 			</div><!-- .header-wrapper -->
 
-			<div class="header-image" {{#if @site.cover_image}}style="background-image: url('{{@site.cover_image}}');"{{/if}}> </div><!-- .header-image -->
+			{{> "header-img"}}
 		</header><!-- #masthead -->
 
 		<div id="content" class="site-content">
