--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -498,14 +498,14 @@ a {
 	-webkit-transition: all 0.2s ease;
 	-moz-transition: all 0.2s ease;
 	transition: all 0.2s ease;
-	color: #4a4a4a;
+	color: var(--ghost-accent-color);
 	text-decoration: none;
 }
 
 a:hover,
 a:active,
 a:focus {
-	color: #903000;
+	color: #333;
 }
 
 .page-links{
@@ -627,7 +627,7 @@ Masthead
 }
 
 .search-toggle:hover:before {
-	color: #903000;
+	color: var(--ghost-accent-color);
 }
 
 
@@ -656,6 +656,14 @@ Menu
 }
 
 .main-navigation a {
+	color: #333;
+	display: block;
+	text-decoration: none;
+	padding: 20px 0;
+}
+
+.main-navigation a:hover {
+	color: var(--ghost-accent-color);
 	display: block;
 	text-decoration: none;
 	padding: 20px 0;
@@ -794,6 +802,7 @@ Menu
 }
 
 .social-links a:before {
+	color: #333;
 	font: var(--fa-font-brands);
 	font-weight: 400;
 	font-size: 18px;
@@ -803,6 +812,10 @@ Menu
 	text-align: center;
 	width: 60px;
 	height: 60px;
+}
+
+.social-links a:hover:before {
+	color: var(--ghost-accent-color);
 }
 
 .social-navigation a[href$="/feed/"]:before {
@@ -926,7 +939,7 @@ Content
 }
 
 .entry-title a:hover {
-	color: #000;
+	color: var(--ghost-accent-color);
 }
 
 .entry-meta a {
@@ -1152,6 +1165,12 @@ Footer
 }
 
 .site-info a {
+	color: #333;
+	font-weight: bold;
+}
+
+.site-info a:hover {
+	color: var(--ghost-accent-color);
 	font-weight: bold;
 }
 
