--- a/partials/header-img.hbs
+++ b/partials/header-img.hbs
@@ -2,11 +2,11 @@
 <div class="header-image" 
 	{{#post}}
 		{{#if feature_image}}
-		 style="background-image: url('{{img_url feature_image}}');"
-		{{/if}}>
+		 	style="background-image: url('{{img_url feature_image}}');">
+		{{/if}}
 	{{else}}
 		{{#if @site.cover_image}}
-			style="background-image: url('{{@site.cover_image}}');"
-		{{/if}}>
+			style="background-image: url('{{@site.cover_image}}');">
+		{{/if}}
 	{{/post}}
 </div><!-- .header-image -->
