--- a/default.hbs
+++ b/default.hbs
@@ -13,7 +13,7 @@
 	{{ghost_head}}
 </head>
 
-<body class="{{body_class}}{{#match @custom.dark_mode "Dark Mode"}} dark-mode{{/match}}">
+<body class="{{body_class}}">
 
 	<div id="page" class="hfeed site">
 
