--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -11,97 +11,44 @@ Version: 1.0.0
 Reset
 --------------------------------------------------------------*/
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
-	border: 0;
-	font-family: inherit;
-	font-size: 100%;
-	font-style: inherit;
-	font-weight: inherit;
-	margin: 0;
-	outline: 0;
-	padding: 0;
-	vertical-align: baseline;
+*, *::before, *::after {
+    box-sizing: border-box;
+}
+
+* {
+    margin: 0;
 }
 
 html {
-	font-size: 62.5%; /* Corrects text resizing oddly in IE6/7 when body font-size is set using em units http://clagnut.com/blog/348/#c790 */
-	overflow-y: scroll; /* Keeps page centered in all browsers regardless of content height */
-	-webkit-text-size-adjust: 100%; /* Prevents iOS text size adjust after orientation change, without disabling user zoom */
-	-ms-text-size-adjust:     100%; /* www.456bereastreet.com/archive/201012/controlling_text_size_in_safari_for_ios_without_disabling_user_zoom/ */
-}
-
-*,
-*:before,
-*:after { /* apply a natural box layout model to all elements; see http://www.paulirish.com/2012/box-sizing-border-box-ftw/ */
-	-webkit-box-sizing: border-box; /* Not needed for modern webkit but still used by Blackberry Browser 7.0; see http://caniuse.com/#search=box-sizing */
-	-moz-box-sizing:    border-box; /* Still needed for Firefox 28; see http://caniuse.com/#search=box-sizing */
-	box-sizing:         border-box;
+    font-size: 62.5%;
 }
 
 body {
-	background: #fff;
+    line-height: 1.6;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-main,
-nav,
-section {
-	display: block;
+img, picture, video, canvas, svg {
+    display: block;
+    height: auto;
+    max-width: 100%;
 }
 
-ol, ul {
-	list-style: none;
+iframe {
+    display: block;
 }
 
-table { /* tables still need 'cellspacing="0"' in the markup */
-	border-collapse: separate;
-	border-spacing: 0;
+input, button, textarea, select {
+    font: inherit;
 }
 
-caption, th, td {
-	font-weight: normal;
-	text-align: left;
+p, h1, h2, h3, h4, h5, h6 {
+    overflow-wrap: break-word;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: "";
-}
-
-blockquote, q {
-	quotes: "" "";
-}
-
-a:focus {
-	outline: thin dotted;
-}
-
-a:hover,
-a:active {
-	outline: 0;
-}
-
-img {
-	height: auto;
-	width: 100%;
-}
-
-a img {
-	display: block;
-	border: 0;
+h1, h2, h3, h4, h5, h6 {
+    line-height: 1.2;
 }
 
 
@@ -346,10 +293,6 @@ textarea {
 	-ms-border-radius: 0;
 	-o-border-radius: 0;
 	border-radius: 0;
-	-webkit-transition: all 250ms ease;
-	-moz-transition: all 250ms ease;
-	-o-transition: all 250ms ease;
-	transition: all 250ms ease;
 }
 
 button:focus,
@@ -475,9 +418,6 @@ label[class*="radio"], label[class*="checkbox"] {
 
 /* Links */
 a {
-	-webkit-transition: all 0.2s ease;
-	-moz-transition: all 0.2s ease;
-	transition: all 0.2s ease;
 	color: var(--ghost-accent-color);
 	text-decoration: none;
 }
@@ -659,10 +599,6 @@ Menu
 	border-left: 1px solid #ccc;
 	border-right: 1px solid #ccc;
 	border-bottom: 1px solid #ccc;
-	transition: all .4s ease-in-out;
-	-webkit-transition: all .4s ease-in-out;
-	-moz-transition: all .4s ease-in-out;
-	-o-transition: all .4s ease-in-out;
 	visibility: hidden;
 	opacity: 0;
 }
@@ -754,6 +690,7 @@ Menu
 
 #sidebar-externals {
 	margin: 15px 0;
+	padding: 0;
 }
 
 .social-links a {
@@ -765,6 +702,7 @@ Menu
 .social-links ul {
 	list-style: none;
 	margin: 0;
+	padding: 0;
 }
 .social-navigation li {
 	float: left;
